sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:3: error: not found: value getValuesCount
  var n : Int =getValuesCount()
               ^